--- a/index.html
+++ b/index.html
@@ -592,19 +592,19 @@
               <ul class="list-unstyled">
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://www.creative-tim.com/presentation">About Us</a>
+                     href="#">About Us</a>
                 </li>
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://blog.creative-tim.com">Blog</a>
+                     href="#">Blog</a>
                 </li>
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://www.github.com/creativetimofficial">Github</a>
+                     href="#">Github</a>
                 </li>
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://www.creative-tim.com/bootstrap-themes/free">Free Products</a>
+                     href="#">Free Products</a>
                 </li>
               </ul>
             </div>
@@ -614,19 +614,19 @@
               <ul class="list-unstyled">
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://github.com/creativetimofficial/argon-design-system/blob/master/LICENSE.md">MIT License</a>
+                     href="#">MIT License</a>
                 </li>
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://creative-tim.com/terms">Terms &amp; Conditions</a>
+                     href="#">Terms &amp; Conditions</a>
                 </li>
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://creative-tim.com/privacy">Privacy Policy</a>
+                     href="#">Privacy Policy</a>
                 </li>
                 <li>
                   <a class="text-gray-700 hover:text-gray-900 font-semibold block pb-2 text-sm"
-                     href="https://creative-tim.com/contact-us">Contact Us</a>
+                     href="#">Contact Us</a>
                 </li>
               </ul>
             </div>
