--- a/index.html
+++ b/index.html
@@ -642,9 +642,9 @@
           <div class="text-sm text-gray-600 font-semibold py-1">
             Copyright © 2022 Tailwind Starter Kit by
             <a
-              href="https://www.creative-tim.com"
+              href="#"
               class="text-gray-600 hover:text-gray-900"
-              >Creative Tim</a
+              >VitRod</a
             >.
           </div>
         </div>
